--- a/pom.xml
+++ b/pom.xml
@@ -86,14 +86,14 @@
             <artifactId>spring-integration-test</artifactId>
             <scope>test</scope>
         </dependency>
-<<<<<<< HEAD
-        <dependency>
-            <groupId>com.cloudinary</groupId>
-            <artifactId>cloudinary-http44</artifactId>
-            <version>1.34.0</version>
-        </dependency>
-=======
->>>>>>> dev
+<!--<<<<<<< HEAD-->
+<!--        <dependency>-->
+<!--            <groupId>com.cloudinary</groupId>-->
+<!--            <artifactId>cloudinary-http44</artifactId>-->
+<!--            <version>1.34.0</version>-->
+<!--        </dependency>-->
+<!--=======-->
+<!--&gt;>>>>>> dev-->
     </dependencies>
 
     <build>
